# tollbooth-authority

./: .fastmcp.yaml  CHANGELOG.md  LICENSE  README.md  fastmcp.json  pyproject.toml  server.json
.github/workflows/: test.yml
scripts/: generate_keypair.py
src/tollbooth_authority/: __init__.py  actor.py  certificate.py  config.py  default_pricing.py  infographic.py  nostr_signing.py  onboarding.py  registry.py  replay.py  role_migration.py  server.py  signing.py  tenant_provisioner.py  vault.py
tests/: test_actor.py  test_certificate.py  test_e2e_self_similar.py  test_infographic.py  test_nostr_signing.py  test_registry.py  test_role_isolation.py  test_signing.py  test_tools.py  test_vault.py
